<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/main"
    android:padding="@dimen/_15dp">

    <TextView
        android:id="@+id/tv_today_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15dp"
        android:layout_marginEnd="@dimen/_1dp"
        android:fontFamily="@font/gensin"
        android:text="@string/txt_today_weather"
        android:textColor="@color/white"
        android:textSize="@dimen/_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/city_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gensin"
            android:text="@string/city_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_today_weather"
            android:paddingTop="@dimen/_45dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/view_degree"
            android:padding="@dimen/_15dp"
            app:layout_constraintTop_toBottomOf="@+id/city_code">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/view_temperature">

                <ImageView
                    android:id="@+id/iv_weather"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cloud"
                    android:tint="@color/white"
                    android:paddingStart="@dimen/_280dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gensin"
                    android:textSize="@dimen/_16sp"
                    android:text="@string/txt_clear_sky"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="@+id/iv_weather"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.701"
                    app:layout_constraintStart_toStartOf="@+id/iv_weather"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_degree"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_weather"
                    android:text="@string/degree"
                    android:paddingStart="@dimen/_180sp"
                    android:fontFamily="@font/gensin"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_60sp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_daily_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gensin"
        android:paddingBottom="@dimen/_15dp"
        android:text="@string/daily_weather"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/rv_daily_weather"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_daily_weather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="128dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>




